--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,22 @@
-fastapi
-uvicorn
-opencv-python
-ultralytics
-numpy
-python-multipart
-pillow
+# PyTorch index must be first
+--index-url https://download.pytorch.org/whl/cpu
+
+# PyTorch packages (specific versions to avoid compatibility issues)
+torch==1.12.1
+torchvision==0.13.1
+torchaudio==0.12.1
+
+# Core FastAPI and server
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-python-multipart==0.0.6
+
+# Computer Vision and ML
+ultralytics==8.0.196
 opencv-python-headless==4.8.1.78
 numpy==1.24.3
-ultralytics==8.0.196
 Pillow==10.0.1
+
+# Utilities
+python-multipart==0.0.6
 websockets==11.0.3
 python-json-logger==2.0.7
-ultralytics
-torch
