--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 # PyTorch index must be first
 --index-url https://download.pytorch.org/whl/cpu
 
-# PyTorch packages (compatible versions available in CPU repository)
-torch==1.13.1+cpu
-torchvision==0.14.1+cpu
-torchaudio==0.13.1+cpu
+# PyTorch packages (using available compatible versions)
+torch==2.0.1+cpu
+torchvision==0.15.2+cpu
+torchaudio==2.0.2+cpu
 
 # Core FastAPI and server
 fastapi==0.104.1
